<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/action_home" />
    </group>

    <item android:title="Organization"
          android:fontFamily="cursive">
        <menu>
            <item
                android:id="@+id/nav_checklist"
                android:icon="@drawable/ic_check_black_24dp"
                android:title="@string/action_checklist" />
            <item
                android:id="@+id/nav_guestList"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/action_guestList" />
            <item
                android:id="@+id/nav_vision"
                android:icon="@drawable/ic_remove_red_eye_black_24dp"
                android:title="@string/action_vision" />
        </menu>
    </item>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_close_black_24dp"
                android:title="@string/action_sign_out" />
        </menu>
    </item>

</menu>
