<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Display2"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        tools:textAlignment="center"
        tools:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="casual"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        tools:textAlignment="center"
        tools:textColor="@color/colorAccent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line_break"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Caption"
        android:textColor="@color/colorLineBreak"
        android:textStyle="bold"
        tools:textColor="@color/colorLineBreak" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="31dp" />

    <TextView
        android:id="@+id/textViewWeddingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCountdown"
            android:layout_width="63dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="casual"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:textAlignment="textEnd"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textStyle="bold" />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="7"
            android:fontFamily="casual"
            android:text="@string/countdown"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/vision"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:fontFamily="casual"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/visionColor"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewVisionColors"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:fontFamily="casual"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/visionSetting"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewVisionSetting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:fontFamily="casual"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/visionBudget"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewVisionBudget"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewWDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>